fix left gradient not covering properly

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,8 @@ body {
 #page {
 	display: flex;
 	justify-content: space-between;
+	gap: 400px;
+	min-height: 100vh;
 }
 #bg-image {
 	height: 100%;
@@ -15,8 +17,11 @@ body {
 }
 
 #left {
-	width: 400px;
-	height: auto;
+	flex: 1; /* Adjust the flex ratio to control the width */
+	background-image: url('./images/bg-main-desktop.png');
+	background-size: cover;
+	background-position: center;
+	background-repeat: repeat-y;
 }
 
 #right {
@@ -48,11 +53,11 @@ body {
 }
 
 .long-input {
-	width: 400px;
+	width: 350px;
 }
 
 .med-input {
-	width: 220px;
+	width: 180px;
 }
 
 .small-input {
@@ -60,7 +65,7 @@ body {
 }
 
 .input-height {
-	height: 45px;
+	height: 50px;
 }
 
 input {
